# Pondside-Ops

./: .gitignore  CONVENTIONS.md  README.md
ember/: BUILD_LOG.md  domain.xml  motd
ember/cloud-init/: meta-data.yaml  user-data.yaml
ember/llama-swap/: config.yaml
harbormaster/: .env.example  BUILD_LOG.md  Dockerfile  README.md  callbacks.py  compose.yml  config.yaml
modal-serverless-inference/: BUILD_LOG.md  README.md  populate_volume.py  pyproject.toml  serve_gemma.py  serve_nomic_embedding.py  serve_qwen.py  serve_qwen_embedding.py
